@@ -995,6 +995,11 @@ html.ms .propform {
         &:not(.recipient) {
             user-select: text;
         }
+
+        &.input {
+            flex: 1;
+            min-width: 100px;
+        }
     }
 
     input {
